# calursus-solr

./: .gitignore  Dockerfile  Pipfile  README.md  UPGRADE.md  clone_ursus_index.py  copy_repository_field.py  docker-compose.yml  fresh_build.Dockerfile  pyproject.toml  solr_tools.py
.github/workflows/: build.yml
calursus/: core.properties
calursus/conf/: schema.xml  solrconfig.xml
calursus/data/index/: _f3cm.fdx  _f3cm.fnm  _f3cm.nvd  _f3cm.nvm  _f3cm.si  _f3cm_3fv.liv  _f3cm_Lucene50_0.doc  _f3cm_Lucene50_0.pos  _f3cm_Lucene50_0.tip  _g0aq.fdt  _g0aq.fdx  _g0aq.fnm  _g0aq.nvd  _g0aq.nvm  _g0aq.si  _g0aq_Lucene50_0.doc  _g0aq_Lucene50_0.pos  _g0aq_Lucene50_0.tip  _g0aq_k2.liv  _ghuk.fdt  _ghuk.fdx  _ghuk.fnm  _ghuk.nvd  _ghuk.nvm  _ghuk.si  _ghuk_3.liv  _ghuk_Lucene50_0.doc  _ghuk_Lucene50_0.pos  _ghuk_Lucene50_0.tim  _ghuk_Lucene50_0.tip  _ghun.fdt  _ghun.fdx  _ghun.fnm  _ghun.nvd  _ghun.nvm  _ghun.si  _ghun_Lucene50_0.doc  _ghun_Lucene50_0.pos  _ghun_Lucene50_0.tim  _ghun_Lucene50_0.tip  (+72 more)
calursus/data/snapshot.20190426181310915/: _l3sp.fnm  _l3sp.nvm  _l3sp.si  _l3sp_39m.liv  _l3sp_Lucene50_0.pos  _m9gh.nvd  _m9gh.nvm  _mxhw.fdt  _mxhw.nvd  _mxhw_2.liv  _mxhw_Lucene50_0.tip  segments_3yl0
calursus/data/snapshot.20190426181400212/: _l3sp.fdx  _l3sp.nvd  _l3sp_Lucene50_0.doc  _m9gh.si  _m9gh_Lucene50_0.pos  _mxhw.fdx  _mxhw_3.liv  _mxhw_Lucene50_0.doc  _mxhw_Lucene50_0.tim  segments_3yl1
calursus/data/spell/: segments_d1  segments_d9
calursus/data/spell_author/: segments_d1  segments_d9
calursus/data/spell_subject/: segments_d1  segments_d9
(+23 files in other folders)
